k8s/04-items-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items-deployment
  namespace: restauranty-lily
  labels:
    app: items
spec:
  replicas: 2
  selector:
    matchLabels:
      app: items
  template:
    metadata:
      labels:
        app: items
    spec:
      containers:
        - name: items
          image: lilywalch/restauranty-items-service:latest
          ports:
            - name: http
              containerPort: 3004
