k8s/06-discounts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discounts-deployment
  namespace: restauranty-lily
  labels:
    app: discounts
spec:
  replicas: 2
  selector:
    matchLabels:
      app: discounts
  template:
    metadata:
      labels:
        app: discounts
    spec:
      containers:
        - name: discounts
          image: lilywalch/restauranty-discounts-service:latest
          ports:
            - containerPort: 3003
