k8s/03-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: restauranty-lily
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
