k8s/05-items-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: items-service
  namespace: restauranty-lily
spec:
  selector:
    app: items
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
