k8s/07-discounts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discounts-service
  namespace: restauranty-lily
spec:
  selector:
    app: discounts
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
