k8s/09-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: restauranty-lily
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
