k8s/13-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: restauranty-lily
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
